--- a/Quotes Generator/src/App.css
+++ b/Quotes Generator/src/App.css
@@ -7,4 +7,11 @@
 
 .app{
     height: 100%;
+    background: url('./Images/NightCityView.jpg');
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
