--- a/Quotes Generator/src/App.css
+++ b/Quotes Generator/src/App.css
@@ -7,7 +7,7 @@
 
 .app{
     height: 100%;
-    background: url('./Images/NightCityView.jpg');
+    background:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)) url('./Images/NightCityView.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -15,3 +15,22 @@
     align-items: center;
     text-align: center;
 }
+
+.card{
+    background-color: whitesmoke;
+    width: 40%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 25px;
+    padding: 2%;
+    box-shadow: 10px 10px;
+}
+
+.heading{
+    display: flex;
+    align-items: center;
+    height: 580px;
+    font-family: 'League Spartan', sans-serif;}
