--- a/Quotes Generator/src/App.css
+++ b/Quotes Generator/src/App.css
@@ -7,7 +7,7 @@
 
 .app{
     height: 100%;
-    background:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)) url('./Images/NightCityView.jpg');
+    background: url('./Images/NightCityView.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
