--- a/Travel Website/src/index.css
+++ b/Travel Website/src/index.css
@@ -6,4 +6,10 @@
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;}
 
-    
+:root{
+    --primaryColor:#3ab3a7;
+    --primaryHover:#0c988a;
+    --secondaryColor:#059789;
+    --secHoverColor:#253b53;
+    --greyColor:#f7f7f7;
+}
