--- a/Travel Website/src/index.css
+++ b/Travel Website/src/index.css
@@ -1,15 +1,69 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@300&family=Montserrat:wght@300;400;500;800&display=swap');
- 
-*{
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Montserrat', sans-serif;}
+    font-family: 'Montserrat', sans-serif;
+}
 
-:root{
-    --primaryColor:#3ab3a7;
-    --primaryHover:#0c988a;
-    --secondaryColor:#059789;
-    --secHoverColor:#253b53;
-    --greyColor:#f7f7f7;
+:root {
+    --primaryColor: #3ab3a7;
+    --primaryHover: #0c988a;
+    --secHoverColor: #253b53;
+    --greyColor: #f7f7f7;
+}
+
+/* Default css */
+
+h1 {
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+}
+li{
+    list-style: none;
+}
+span{
+    display: block;
+}
+.flex{
+    display: flex;
+    align-items: center;
+}
+.grid{
+    display: grid;
+    align-items: center;
+    gap: 1rem;
+}
+.input{
+    font-size: 100%;
+}
+.spanText{
+    font-size: 14px;
+}
+
+p{
+    font-size: 13px;
+    opacity: 0.7;
+}
+.secTitle{
+    text-align: center;
+    padding: 1rem 0;
+    font-size: 25px;
+    font-weight: 700;
+    color: var(--primaryColor);
+}
+.section{
+    padding: 4rem 0 2rem;
+}
+.container{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+img{
+    height: auto;
+    width: 100%;
 }
