--- a/Travel Website/src/index.css
+++ b/Travel Website/src/index.css
@@ -67,3 +67,11 @@ img{
     height: auto;
     width: 100%;
 }
+.icon{
+    font-size: 20px;
+    cursor: pointer;
+}
+.btn{
+    border: 2px solid var(--primaryColor);
+    padding: 0.5rem 1.5rem;
+}
