--- a/Travel Website/src/Components/Navbar/Navbar.scss
+++ b/Travel Website/src/Components/Navbar/Navbar.scss
@@ -5,6 +5,14 @@
     --secHoverColor:#253b53;
     --greyColor:#f7f7f7;
 }
+
 .header{
-    
+ position: fixed;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ width: 100%;
+ padding: 2rem;
+ background: var(--primaryColor);  
+ z-index: 2000; 
 }
