--- a/Travel Website/src/Components/Navbar/Navbar.css
+++ b/Travel Website/src/Components/Navbar/Navbar.css
@@ -4,4 +4,26 @@
   --secondaryColor:#059789;
   --secHoverColor:#253b53;
   --greyColor:#f7f7f7;
+}
+
+.header {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  padding: 2rem;
+  background: var(--primaryColor);
+  z-index: 2000;
+}
+.header .logoDiv .logo {
+  color: var(--greyColor);
+  font-weight: 600;
+  cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .header .menuDiv {
+    background-color: var(--primaryColor);
+    position: absolute;
+  }
 }/*# sourceMappingURL=Navbar.css.map */
