--- a/Travel Website/src/Components/Navbar/Navbar.scss
+++ b/Travel Website/src/Components/Navbar/Navbar.scss
@@ -27,6 +27,13 @@
     .menuDiv{
         background-color: var(--primaryColor);
         position: absolute;
+        height: max-content;
+    width: 80%;
+    border-radius: 10px;
+    padding: 1rem;
+    top: 200%;
+    left: 50%;
+    transform: translate(-50%);
     }
   }
 }
