--- a/Travel Website/src/Components/Navbar/Navbar.css
+++ b/Travel Website/src/Components/Navbar/Navbar.css
@@ -25,5 +25,16 @@
   .header .menuDiv {
     background-color: var(--primaryColor);
     position: absolute;
+    height: -moz-max-content;
+    height: max-content;
+    width: 80%;
+    border-radius: 10px;
+    padding: 1rem;
+    top: 200%;
+    left: 50%;
+    transform: translate(-50%);
+    box-shadow: 0 2px 4px rgba(243, 243, 243, 0.904);
+    transition: 0.3s ease;
+    z-index: 3000;
   }
 }/*# sourceMappingURL=Navbar.css.map */
