--- a/Travel Website/src/Components/Navbar/Navbar.scss
+++ b/Travel Website/src/Components/Navbar/Navbar.scss
@@ -47,8 +47,10 @@
                 align-items: center;
                 margin: auto;
                 padding: 1rem 0;
-
-    
+                
+                .navItem{
+                    padding: 1rem 0;
+                }
             }
         }
     }
