--- a/Travel Website/src/Components/Navbar/Navbar.css
+++ b/Travel Website/src/Components/Navbar/Navbar.css
@@ -46,4 +46,15 @@
     margin: auto;
     padding: 1rem 0;
   }
+  .header .menuDiv .menuLists .navItem {
+    padding: 1rem 0;
+  }
+  .header .menuDiv .menuLists .navItem .menuLink {
+    color: white;
+    font-size: 15px;
+    font-weight: 500;
+  }
+  .header .menuDiv .menuLists .navItem .menuLink:hover {
+    color: var(--secHoverColor);
+  }
 }/*# sourceMappingURL=Navbar.css.map */
