--- a/Travel Website/src/Components/Navbar/Navbar.scss
+++ b/Travel Website/src/Components/Navbar/Navbar.scss
@@ -50,6 +50,15 @@
                 
                 .navItem{
                     padding: 1rem 0;
+
+                .menuLink{
+                    color: white;
+                    font-size: 15px;
+                    font-weight: 500;
+                    &:hover{
+                        color: var(--secHoverColor);
+                    }
+                }
                 }
             }
         }
