--- a/Travel Website/src/Components/Navbar/Navbar.scss
+++ b/Travel Website/src/Components/Navbar/Navbar.scss
@@ -53,6 +53,11 @@
 
                 .menuLink{
                     color: white;
+                    font-size: 15px;
+                    font-weight: 500;
+                    &:hover{
+                        color: var(--secHoverColor);
+                    }
                 }
             }
         }
