--- a/Travel Website/src/Components/Navbar/Navbar.css
+++ b/Travel Website/src/Components/Navbar/Navbar.css
@@ -72,4 +72,7 @@
   .header .activenavbar {
     top: 6rem;
   }
+  .header .socialIcons {
+    display: none;
+  }
 }/*# sourceMappingURL=Navbar.css.map */
