--- a/Travel Website/src/Components/Navbar/Navbar.css
+++ b/Travel Website/src/Components/Navbar/Navbar.css
@@ -75,4 +75,11 @@
   .header .socialIcons {
     display: none;
   }
+  .header .toggleNavbar {
+    color: var(--greyColor);
+    font-size: 25px;
+  }
+  .header .toggleNavbar:hover .icon {
+    color: var(--primaryColor);
+  }
 }/*# sourceMappingURL=Navbar.css.map */
