--- a/Travel Website/src/Components/Navbar/Navbar.scss
+++ b/Travel Website/src/Components/Navbar/Navbar.scss
@@ -87,7 +87,7 @@
         font-size: 25px;
         &:hover{
             .icon{
-                color: var(--primaryColor);
+                color: var(--secHoverColor);
             }
         }
     }
