--- a/Travel Website/src/Components/Home/Home.css
+++ b/Travel Website/src/Components/Home/Home.css
@@ -3,4 +3,8 @@
   --primaryHover:#0c988a;
   --secHoverColor:#253b53;
   --greyColor:#f7f7f7;
+}
+
+.home {
+  height: 90vh;
 }/*# sourceMappingURL=Home.css.map */
