--- a/Travel Website/src/Components/Home/Home.css
+++ b/Travel Website/src/Components/Home/Home.css
@@ -9,4 +9,5 @@
   height: 90vh;
   width: 100%;
   padding: 5rem 1.5rem;
+  background: linear-gradient(rgba(0, 0, 1, 0.42), rgba(0, 0, 1, 0.549));
 }/*# sourceMappingURL=Home.css.map */
